--- a/Source/Relativity.Sync.Tests.Integration/app.config
+++ b/Source/Relativity.Sync.Tests.Integration/app.config
@@ -10,6 +10,11 @@
   </dependentAssembly>
   <dependentAssembly>
     <Paket>True</Paket>
+    <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.9.1.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <Paket>True</Paket>
     <assemblyIdentity name="Microsoft.CSharp" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.0.4.0" />
   </dependentAssembly>
