--- a/Source/Relativity.Sync.Tests.Unit/app.config
+++ b/Source/Relativity.Sync.Tests.Unit/app.config
@@ -8,6 +8,11 @@
     <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-4.7.0.0" newVersion="4.2.0.0" />
   </dependentAssembly>
+	  <dependentAssembly>
+		  <Paket>True</Paket>
+		  <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+		  <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.9.1.0" />
+	  </dependentAssembly>
   <dependentAssembly>
     <Paket>True</Paket>
     <assemblyIdentity name="Microsoft.CSharp" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
