--- a/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
+++ b/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Repositories\Implementations\RelativityObjectManager.cs" />
     <Compile Include="Repositories\Implementations\JobRepository.cs" />
     <Compile Include="Repositories\Implementations\SecretStoreHelper.cs" />
+    <Compile Include="Repositories\Implementations\ViewFieldRepository.cs" />
     <Compile Include="Repositories\IProductionRepository.cs" />
     <Compile Include="Repositories\IKeywordSearchRepository.cs" />
     <Compile Include="Repositories\Implementations\KeplerKeywordSearchRepository.cs" />
@@ -137,6 +138,7 @@
     <Compile Include="Repositories\IQueryFieldLookupRepository.cs" />
     <Compile Include="Repositories\IRelativityObjectManager.cs" />
     <Compile Include="Repositories\IJobRepository.cs" />
+    <Compile Include="Repositories\IViewFieldRepository.cs" />
     <Compile Include="ResourcePoolContext.cs" />
     <Compile Include="RetryHandler.cs" />
     <Compile Include="RetryHandlerFactory.cs" />
