move IoC container installers/registrator to single place

--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -82,20 +82,20 @@
     <Compile Include="Context\UserContext\Services\RequestHeadersUserContextService.cs" />
     <Compile Include="Context\UserContext\Services\SessionUserContextService.cs" />
     <Compile Include="Context\UserContext\UserContext.cs" />
-    <Compile Include="Context\UserContext\UserContextRegistration.cs" />
-    <Compile Include="Installers\ContextInstaller.cs" />
+    <Compile Include="Installers\Context\UserContextRegistration.cs" />
+    <Compile Include="Installers\Context\ContextInstaller.cs" />
     <Compile Include="Installers\HelpersInstaller.cs" />
     <Compile Include="Infrastructure\ExceptionLoggers\WebAPIExceptionLogger.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="Installers\IntegrationPointsServicesInstaller.cs" />
+    <Compile Include="Installers\IntegrationPointsServices\IntegrationPointsServicesInstaller.cs" />
     <Compile Include="Installers\ContainerInstaller.cs" />
     <Compile Include="IntegrationPointsServices\Logging\IWebCorrelationContextProvider.cs" />
-    <Compile Include="IntegrationPointsServices\Logging\LoggingRegistration.cs" />
+    <Compile Include="Installers\IntegrationPointsServices\LoggingRegistration.cs" />
     <Compile Include="Installers\InfrastructureInstaller.cs" />
     <Compile Include="Installers\RelativityServicesInstaler.cs" />
     <Compile Include="Context\WorkspaceContext\Services\IContextService.cs" />
     <Compile Include="Infrastructure\Session\SessionServiceFactory.cs" />
-    <Compile Include="Context\WorkspaceContext\WorkspaceContextRegistration.cs" />
+    <Compile Include="Installers\Context\WorkspaceContextRegistration.cs" />
     <Compile Include="Context\WorkspaceContext\Services\ControllerCustomPageService.cs" />
     <Compile Include="Controllers\API\ExportSettingsValidationController.cs" />
     <Compile Include="Controllers\API\FieldCatalogController.cs" />
