--- a/Source/kCura.IntegrationPoints.Web.Tests/kCura.IntegrationPoints.Web.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Web.Tests/kCura.IntegrationPoints.Web.Tests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="..\..\Version\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Context\WorkspaceContext\LastWorkspaceContextServiceTests.cs" />
     <Compile Include="Infrastructure\ExceptionLogger\WebAPIExceptionLoggerTests.cs" />
     <Compile Include="Controllers\API\DataTransferLocationControllerTests.cs" />
     <Compile Include="Controllers\API\ExportFieldsControllerTests.cs" />
