--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -177,7 +177,7 @@
     <Compile Include="Context\WorkspaceContext\Exceptions\WorkspaceIdNotFoundException.cs" />
     <Compile Include="Context\WorkspaceContext\IWorkspaceContext.cs" />
     <Compile Include="Helpers\RelativityUrlHelper.cs" />
-    <Compile Include="RequestExtensions.cs" />
+    <Compile Include="Extensions\RequestExtensions.cs" />
     <Compile Include="IntegrationPointsServices\ServiceContextHelperForWeb.cs" />
     <Compile Include="Infrastructure\Session\SessionService.cs" />
     <Compile Include="SignalRHubs\IntegrationPointDataHubErrorHandlingPipelineModule.cs" />
