--- a/Source/Relativity.Sync.Tests.System/app.config
+++ b/Source/Relativity.Sync.Tests.System/app.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
+	<appSettings>
+		<add key="RelativityHostName" value=""/>
+		<add key="RelativityUserName" value=""/>
+		<add key="RelativityUserPassword" value=""/>
+	</appSettings>
 	<runtime>
-    
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
 				<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
