create single installer in web project: WebIntegrationPointsInstaller

--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -84,16 +84,17 @@
     <Compile Include="Context\WorkspaceContext\LastWorkspaceContextService.cs" />
     <Compile Include="Extensions\HttpConfigurationExtensions.cs" />
     <Compile Include="Installers\Context\UserContextRegistration.cs" />
-    <Compile Include="Installers\Context\ContextInstaller.cs" />
-    <Compile Include="Installers\HelpersInstaller.cs" />
+    <Compile Include="Installers\Context\ContextRegistration.cs" />
+    <Compile Include="Installers\HelpersRegistration.cs" />
     <Compile Include="Infrastructure\ExceptionLoggers\WebAPIExceptionLogger.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="Installers\IntegrationPointsServices\IntegrationPointsServicesInstaller.cs" />
-    <Compile Include="Installers\ContainerInstaller.cs" />
+    <Compile Include="Installers\IntegrationPointsServices\IntegrationPointsServicesRegistration.cs" />
+    <Compile Include="Installers\ContainerConfiguration.cs" />
+    <Compile Include="Installers\WebIntegrationPointsInstaller.cs" />
     <Compile Include="IntegrationPointsServices\Logging\IWebCorrelationContextProvider.cs" />
     <Compile Include="Installers\IntegrationPointsServices\LoggingRegistration.cs" />
-    <Compile Include="Installers\InfrastructureInstaller.cs" />
-    <Compile Include="Installers\RelativityServicesInstaler.cs" />
+    <Compile Include="Installers\InfrastructureRegistration.cs" />
+    <Compile Include="Installers\RelativityServicesRegistration.cs" />
     <Compile Include="Infrastructure\Session\SessionServiceFactory.cs" />
     <Compile Include="Installers\Context\WorkspaceContextRegistration.cs" />
     <Compile Include="Context\WorkspaceContext\SessionWorkspaceContextService.cs" />
@@ -148,7 +149,7 @@
     <Compile Include="HelperConfigSqlServiceFactoryWrapper.cs" />
     <Compile Include="IntegrationPointsServices\Logging\CacheHolder.cs" />
     <Compile Include="Helpers\SummaryPageSelector.cs" />
-    <Compile Include="Installers\ControllersInstaller.cs" />
+    <Compile Include="Installers\ControllersRegistration.cs" />
     <Compile Include="Controllers\IntegrationPointProfilesController.cs" />
     <Compile Include="Helpers\IRelativityUrlHelper.cs" />
     <Compile Include="IntegrationPointsServices\Logging\ICacheHolder.cs" />
