--- a/Source/kCura.IntegrationPoints.Web.Tests/kCura.IntegrationPoints.Web.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Web.Tests/kCura.IntegrationPoints.Web.Tests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Context\WorkspaceContext\LastWorkspaceContextServiceTests.cs" />
     <Compile Include="Extensions\HttpConfigurationExtensionsTests.cs" />
     <Compile Include="Extensions\RequestExtensionsTests.cs" />
+    <Compile Include="Helpers\RelativityUrlHelperTests.cs" />
     <Compile Include="Infrastructure\ExceptionLogger\WebAPIExceptionLoggerTests.cs" />
     <Compile Include="Controllers\API\DataTransferLocationControllerTests.cs" />
     <Compile Include="Controllers\API\ExportFieldsControllerTests.cs" />
