tests for LoggingRegistration

--- a/Source/kCura.IntegrationPoints.Web.Tests/kCura.IntegrationPoints.Web.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Web.Tests/kCura.IntegrationPoints.Web.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Infrastructure\Session\SessionServiceTests.cs" />
     <Compile Include="Installers\Context\UserContextRegistrationTests.cs" />
     <Compile Include="Installers\Context\WorkspaceContextRegistrationTests.cs" />
+    <Compile Include="Installers\IntegrationPointsServices\LoggingRegistrationTests.cs" />
     <Compile Include="IntegrationPointsServices\Logging\CacheHolderTests.cs" />
     <Compile Include="Helpers\SummaryPageSelectorTests.cs" />
     <Compile Include="IntegrationPointsServices\Logging\WebCorrelationContextProviderTests.cs" />
