--- a/Source/Relativity.Sync.Tests.Integration/app.config
+++ b/Source/Relativity.Sync.Tests.Integration/app.config
@@ -10,11 +10,6 @@
   </dependentAssembly>
   <dependentAssembly>
     <Paket>True</Paket>
-    <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.9.1.0" />
-  </dependentAssembly>
-  <dependentAssembly>
-    <Paket>True</Paket>
     <assemblyIdentity name="Microsoft.CSharp" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.0.4.0" />
   </dependentAssembly>
@@ -22,6 +17,11 @@
     <Paket>True</Paket>
     <assemblyIdentity name="System.ComponentModel" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.0.2.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <Paket>True</Paket>
+    <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="12.0.0.0" />
   </dependentAssembly>
   <dependentAssembly>
     <Paket>True</Paket>
