--- a/Source/kCura.IntegrationPoints.Web.Tests.Integration/kCura.IntegrationPoints.Web.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.Web.Tests.Integration/kCura.IntegrationPoints.Web.Tests.Integration.csproj
@@ -46,6 +46,7 @@
     <Compile Include="..\..\Version\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Context\UserContextIntegrationTests.cs" />
     <Compile Include="Context\WorkspaceContextIntegrationTests.cs" />
     <Compile Include="Controllers\ImportProviderImageControllerTests.cs" />
     <Compile Include="Controllers\SavedSearchQueryTests.cs" />
