Cleanup system tests' app.config

--- a/Source/Relativity.Sync.Tests.System/app.config
+++ b/Source/Relativity.Sync.Tests.System/app.config
@@ -2,9 +2,9 @@
 
 <configuration>
 	<appSettings>
-		<add key="RelativityHostName" value="testvmaj10.kcura.corp" />
-		<add key="RelativityUserName" value="relativity.admin@kcura.com" />
-		<add key="RelativityUserPassword" value="Test1234!" />
+		<add key="RelativityHostName" value="" />
+		<add key="RelativityUserName" value="" />
+		<add key="RelativityUserPassword" value="" />
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
